overflow fix remove container padding

--- a/src/index.css
+++ b/src/index.css
@@ -298,7 +298,6 @@ a {
 
   .container {
     width: 90%;
-    padding: 0 1em;
   }
   .navbar .container {
     display: unset;
